# mlops-services

./: Dockerfile  Makefile  README.md  docker-compose.yml  example.env  main.py  main_mlflow.py  main_mlflow_custom.py  pyproject.toml
docker/mlflow_build/: Dockerfile  basic_auth.ini
