[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Eugene Chernov <ev7080@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "python main.py"
sh = 'docker compose up -d'
