[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Eugene Chernov <ev7080@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
loguru = "^0.7.3"
mlflow = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "python main.py"
create_folders = 'mkdir minio_data'
start_project = 'docker compose up -d'
build = ["create_folders", "start_project"]
